prueba2/kubernetes/00-ingress-controller.yaml
apiVersion: networking.k8s.io/v1 # ingress para redireccionar el trafico en el puerto 80 hacia react o django respectivamente
kind: Ingress
metadata:
  name: ingress-service
  labels: 
    name: ingress-service
spec:
  rules:
    - http:
        paths:
          - path: "/admin" # si /admin redirecciona el trafico hacia el backend
            pathType: Prefix
            backend:
              service: 
                name: django-service
                port: 
                  number: 8000
          - path: "/" # si / o vacio redirecciona el trafico hacia el frontend
            pathType: Prefix
            backend:
              service: 
                name: react-service
                port: 
                  number: 3000
